Changed libraries from jdk11 to jdk1.8